--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,3 +1,31 @@
-<!-- Fill in code here to create a form that can be used for either creating or editing a post (see Rails Guides Getting Started section 5.12 if you need help) -->
+<% if @post.errors.any? %>
+<h2>
+<%= pluralize(@post.errors.count, "error") %>
+prevented this post from being saved
+</h2>
+<ul>
+	<% @post.errors.full_messages.each do |msg| %>
+	<li> <%=msg %> </li>
+	<% end %>
+</ul>
+<% end %>
 
-<!-- BONUS! Add some error handling -->
+
+<%= form_for @post do |f| %>
+<p> 
+<%= f.label :bru_name %><br>
+<%= f.text_field :bru_name %> </p>
+
+<p>
+<%= f.label :title %> <br>
+<%= f.text_field :title %> </p>
+
+<p>
+<%= f.label :body %> <br>
+<%= f.text_area :body %> </p>
+
+<p>
+<%= f.submit %> </p>
+<% end %>
+
+
